Bug 937074 - [Bluetooth] Make sure SLC established before we set up SCO. r=echou