dom/bluetooth/bluez/BluetoothHfpManager.h
@@ -98,6 +98,17 @@ public:
   virtual void OnSocketDisconnect(BluetoothSocket* aSocket) MOZ_OVERRIDE;
 
   bool Listen();
+  /**
+   * This function set up a Synchronous Connection (SCO) link for HFP.
+   * Service Level Connection (SLC) should be established before SCO setup
+   * process.
+   * If SLC haven't been established, this function will return false and send a
+   * request to set up SCO ater HfpManager receive AT+CMER.
+   *
+   * @param  aRunnable Indicate a BluetoothReplyRunnable to execute this
+   *                   function. The default value is nullpter
+   * @return <code>true</code> if SCO established successfully
+   */
   bool ConnectSco(BluetoothReplyRunnable* aRunnable = nullptr);
   bool DisconnectSco();
   bool ListenSco();
@@ -175,6 +186,8 @@ private:
 #endif
   bool mCMEE;
   bool mCMER;
+  bool mConnectScoRequest;
+  bool mSlcConnected;
 #ifdef MOZ_B2G_RIL
   bool mFirstCKPD;
   int mNetworkSelectionMode;
